; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_moduleChangeCallback.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_hooks.c_moduleChangeCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@REDISMODULE_SUBEVENT_MODULE_LOADED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"module-loaded\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"module-unloaded\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @moduleChangeCallback(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_2__*, align 8
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @REDISMODULE_NOT_USED(i32 %11)
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %9, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* @REDISMODULE_SUBEVENT_MODULE_LOADED, align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0)
  store i8* %19, i8** %10, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i8*, i8** %10, align 8
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @LogStringEvent(i32* %20, i8* %21, i32 %24)
  ret void
}

declare dso_local i32 @REDISMODULE_NOT_USED(i32) #1

declare dso_local i32 @LogStringEvent(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
